

[package]
name = "mcp-server-examples"
version = "0.1.5"
edition = "2024"
publish = false

[dependencies]
rmcp = { path = "../../crates/rmcp", features = [
    "server",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.9", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.14" }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1" }
hyper-util = { version = "0", features = ["server"] }

[dev-dependencies]
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec"] }

[[example]]
name = "servers_counter_stdio"
path = "src/counter_stdio.rs"

[[example]]
name = "servers_counter_sse"
path = "src/counter_sse.rs"

[[example]]
name = "servers_counter_sse_directly"
path = "src/counter_sse_directly.rs"

[[example]]
name = "servers_memory_stdio"
path = "src/memory_stdio.rs"

[[example]]
name = "servers_counter_streamhttp"
path = "src/counter_streamhttp.rs"

[[example]]
name = "servers_complex_auth_sse"
path = "src/complex_auth_sse.rs"

[[example]]
name = "servers_simple_auth_sse"
path = "src/simple_auth_sse.rs"

[[example]]
name = "counter_hyper_streamable_http"
path = "src/counter_hyper_streamable_http.rs"
