[package]
name = "simple-chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
toml = "0.8"
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-sse-client",
    "reqwest"
], no-default-features = true }
clap = { version = "4.0", features = ["derive"] }
