[package]
name = "transport"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
rmcp = { path = "../../crates/rmcp", features = ["server", "client"] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "net",
    "fs",
    "time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.9" }
schemars = { version = "0.8", optional = true }
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-tungstenite = "0.27.0"
reqwest = { version = "0.12" }
pin-project-lite = "0.2"

[[example]]
name = "tcp"
path = "src/tcp.rs"


[[example]]
name = "http_upgrade"
path = "src/http_upgrade.rs"

[[example]]
name = "unix_socket"
path = "src/unix_socket.rs"

[[example]]
name = "websocket"
path = "src/websocket.rs"

[[example]]
name = "named-pipe"
path = "src/named-pipe.rs"
