[package]
name = "wasi-mcp-example"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi = { version = "0.14.2"}
tokio = { version = "1", features = ["rt", "io-util", "sync", "macros", "time"] }
rmcp= { path = "../../crates/rmcp", features = ["server", "macros"] }
serde = { version  = "1", features = ["derive"]}
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing = "0.1"